--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <body>
     <main>
-        <!-- Header -->
-        <header class="header">
+        <header class="fixed-header">
             <div class="content">
+                <!-- Navbar  -->
                 <nav class="navbar">
                     <!-- Logo -->
                     <img src="./assets/img/Logo.svg" alt="Besnik.">
@@ -47,7 +47,12 @@
                     </div>
 
                 </nav>
+            </div>
+        </header>
 
+        <!-- Hero -->
+        <div class="hero-wrap">
+            <div class="content">
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -58,11 +63,10 @@
                         <!-- Call to action  -->
                         <a href="#!" class="btn hero-cta">More About Us</a>
                     </div>
-
                     <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live" class="hero-img">
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Clients -->
         <div class="clients">
