--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 </head>
 
 <body>
-    <main>
+    <main id="home">
         <header class="fixed-header">
             <div class="content">
                 <!-- Navbar  -->
                 <nav class="navbar">
                     <!-- Logo -->
-                    <a href="#!">
+                    <a href="#home">
                         <img src="./assets/img/Logo.svg" alt="Besnik.">
                     </a>
 
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#!">Home</a></li>
-                        <li><a href="#!">Features</a></li>
-                        <li><a href="#!">Service</a></li>
-                        <li><a href="#!">Resources</a></li>
-                        <li><a href="#!">Contact</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#service">Service</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
 
                     <!-- Action -->
@@ -111,7 +111,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div class="guides" id="service">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
@@ -152,7 +152,7 @@
         </div>
 
         <!-- Featured -->
-        <div class="featured">
+        <div class="featured" id="features">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -228,7 +228,7 @@
         </div>
 
         <!-- Stats -->
-        <div class="stats">
+        <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -307,7 +307,7 @@
         </div>
 
         <!-- Subscription -->
-        <div class="subscription">
+        <div id="contact" class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
