--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 </head>
 
 <body>
-    <main id="home">
+    <main>
         <header class="fixed-header">
             <div class="content">
                 <!-- Navbar  -->
                 <nav class="navbar">
                     <!-- Logo -->
-                    <a href="#home">
+                    <a href="#">
                         <img src="./assets/img/Logo.svg" alt="Besnik.">
                     </a>
 
                     <!-- Navigation -->
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#service">Service</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="#resources">Resources</a></li>
@@ -54,8 +54,7 @@
 
         <!-- Hero -->
         <div class="hero-wrap">
-            <div class="content">
-                <div class="hero">
+            <div class="content">               
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
                         <h1 class="title">Discover a place
@@ -65,8 +64,7 @@
                         <!-- Call to action  -->
                         <a href="#!" class="btn hero-cta">More About Us</a>
                     </div>
-                    <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live" class="hero-img">
-                </div>
+                    <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live" class="hero-img">            
             </div>
         </div>
 
